
MASTER

* Making sure that smalldatetime types are OK to use. Also fixed a bug in the #view_information method that 
  checks to see if a view definition is equal to 4000 chars, meaning that it is most likely truncated and 
  needs to use the backup method of sp_helptext to get it's view definition. [Ken Collins]


* 2.2.13 * (February 10th, 2009)

* Update #indexes to use unqualified table name. Fixes cases where users may decide to use table 
  name prefixes like 'dbo.'. [Ken Collins]


* 2.2.12 * (February 8th, 2009)

* Update table_exists? to work with qualified table names that may include an user prefix. [Ken Collins]


* 2.2.10/11 * (January 22nd, 2009)

* Add a rails-sqlserver-2000-2005-adapter.rb file so that long :lib option for config.gem is no longer needed.


* 2.2.9 * (January 22nd, 2009)

* Fixing a small bug in the deprecated DBI::Timestamp conversion so it correctly converts nanosecond whole 
  numbers to back to pre type cast SQL Server milliseconds, ultimately allow ruby's Time#usec which is 
  microseconds to be correct. [Ken Collins]
  
* Sometimes views are more than 4000 chars long and will return NULL for the VIEW_DEFINITION. If so, use 
  sp_helptext procedure as a backup method. [Ken Collins]


* 2.2.8 (January 9th, 2009)

* Update execute_procedure method a bit to remove excess code. [Ken Collins]


* 2.2.7 (January 9th, 2009)

* Created a connection#execute_procedure method that takes can take any number of ruby objects as variables 
  and quotes them according to the connection's rules. Also added an ActiveRecord::Base class level core 
  extension that hooks into this. It also checks if the connection responds to #execute_procedure and if 
  not returns an empty array. [Ken Collins]

* Added a #enable_default_unicode_types class attribute access to make all new added or changed string types 
  like :string/:text default to unicode/national data types. See the README for full details. Added a rake 